:hammer: 优化 expression 部分